--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '6.0.0'
-    id 'com.jfrog.bintray' version '1.8.4'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group 'com.github.johnnyjayjay'
@@ -75,7 +74,7 @@ def pomConfig = {
     scm {
         url "https://github.com/johnnyjayjay/spigot-maps"
     }
-}
+} as Object
 
 publishing {
     publications {
